# autopallios

./: .gitignore  CONTRIBUTING.md  LICENSE  MENTORS_PRIVATE.example.md  README.md  mkdocs.yml  pixi.toml  pyproject.toml
.github/workflows/: ci.yml  docs.yml
autopallios/: __init__.py  _debug.py  _typing.py  _utils.py  cli.py  pipeline.py  recipe.py  viz.py
autopallios/core/: __init__.py  baseline.py  filter.py  io.py  segmenter.py
autopallios/data/: __init__.py  annotations.py  external.py  synthetic.py
autopallios/modules/: __init__.py  _common.py  evaluation.py  intensity.py  tracking.py
docs/: chapter0_setup.md  for_mentors.md  from_notebook_to_library.md  index.md  mentor_runbook.md
docs/reference/: core.md  modules.md
docs/roles/: data_lead.md  hpc_lead.md  model_lead.md  viz_comms_lead.md
docs/week1_foundations/: index.md
docs/week1_microscope_to_numbers/: classic_cv_baseline.md  index.md
docs/week2_annotate_cv_eval/: annotation.md  classic_cv_baseline.md  implement_the_metrics.md  index.md  pr_curve_and_auc.md
docs/week2_teaching_to_see/: index.md
docs/week3_algorithm_hpc/: index.md  tracking_advanced.md
docs/week3_scaling_and_tracking/: index.md
docs/week4_finish_present/: compare_to_agilent.md  index.md
docs/week4_make_it_usable/: index.md
notebooks/: README.md
notebooks/solutions/week1_foundations/: 01_command_line_and_setup.ipynb  01_command_line_and_setup.py  02_images_are_numbers.ipynb  02_images_are_numbers.py  03_the_biology_and_assay.ipynb  03_the_biology_and_assay.py  04_visualize_a_well.ipynb  04_visualize_a_well.py
notebooks/solutions/week2_annotate_cv_eval/: 01_annotate_5_images.ipynb  01_annotate_5_images.py  02_classic_cv_baseline.py  03_implement_iou.ipynb  03_implement_iou.py  04_precision_recall_f1.ipynb  04_precision_recall_f1.py  05_pr_curve_and_auc.ipynb  05_pr_curve_and_auc.py
notebooks/solutions/week3_algorithm_hpc/: 01_run_deep_model.py  02_beat_the_baseline.ipynb  02_beat_the_baseline.py  03_to_the_supercomputer.py  04_tracking_advanced.py
notebooks/solutions/week4_finish_present/: 01_one_command_tool.ipynb  01_one_command_tool.py  02_validation_study.ipynb  02_validation_study.py  03_make_the_figures.py  04_distill_for_hpc.py
notebooks/week1_foundations/: 01_command_line_and_setup.py  02_images_are_numbers.py  03_the_biology_and_assay.py  04_visualize_a_well.py
notebooks/week2_annotate_cv_eval/: 01_annotate_5_images.ipynb  01_annotate_5_images.py  02_classic_cv_baseline.ipynb  02_classic_cv_baseline.py  03_implement_iou.ipynb  03_implement_iou.py  04_precision_recall_f1.ipynb  04_precision_recall_f1.py  05_pr_curve_and_auc.ipynb  05_pr_curve_and_auc.py
notebooks/week3_algorithm_hpc/: 01_run_deep_model.ipynb  01_run_deep_model.py  02_beat_the_baseline.py  03_to_the_supercomputer.ipynb  03_to_the_supercomputer.py  04_tracking_advanced.ipynb  04_tracking_advanced.py
notebooks/week3_algorithm_hpc/output/: .gitkeep
notebooks/week4_finish_present/: 01_one_command_tool.py  02_validation_study.py  03_make_the_figures.ipynb  03_make_the_figures.py  04_distill_for_hpc.ipynb  04_distill_for_hpc.py
recipes/_template/: README.md  run_experiment.py
recipes/cancer_cell_death/: README.md  run_kill_curve.py
recipes/wound_healing/: README.md  run_migration.py
slurm/: README.md  segment_array.sbatch
tests/: test_annotations.py  test_baseline.py  test_evaluation.py  test_external.py  test_imports.py  test_io_contract.py  test_recipes_smoke.py  test_synthetic.py  test_tracking.py  test_viz.py
tools/: make_student_version.py
